<resources>
    <string name="app_name">Popular Controls</string>
    <string name="button">ADD</string>
    <string name="editText">Number</string>
    <string name="editText2">Number</string>
    <string name="textView">SUM = </string>
    <string name="imageButton">Logo1</string>
    <string name="imageButton2">Logo2</string>
    <string name="switch1">SHOW/HIDE</string>
    <string name="toggleButton_ON">ON</string>
    <string name="toggleButton_OFF">OFF</string>
    <string name="imageView">Image</string>
    <string name="button2">Rewrite</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="rewrite">Rewrite</string>
</resources>
